# oemof_pipe

./: .gitignore  README.md  blueprint.py  builder.py  main.py  pyproject.toml  scenario.py  settings.py  tui.py
components/: asymmetric_storage.yaml  backpressure.yaml  bev.yaml  bus.yaml  conversion.yaml  excess.yaml  extraction.yaml  link.yaml  load.yaml  profile.yaml  reservoir.yaml  shortage.yaml  storage.yaml  volatile.yaml
oemof_pipe/: blueprint.py  builder.py  main.py  scenario.py  settings.py
oemof_pipe/components/: backpressure.yaml  excess.yaml  link.yaml  load.yaml  reservoir.yaml  shortage.yaml  storage.yaml  volatile.yaml
tests/: test_blueprint.py  test_builder.py  test_scenario.py
tests/test_data/blueprints/: test.yaml
tests/test_data/datapackages/mapping/: datapackage.json
tests/test_data/datapackages/mapping/data/sequences/: electricity_demand_profile.csv
tests/test_data/datapackages/regions/: datapackage.json
tests/test_data/datapackages/regions/data/elements/: bus.csv  electricity_demand.csv  heat_demand.csv  liion_storage.csv
tests/test_data/datapackages/regions/data/sequences/: electricity_demand_profile.csv  liion_storage_profile.csv
tests/test_data/datapackages/test/: datapackage.json
tests/test_data/datapackages/test/data/elements/: bus.csv  chp.csv  electricity_demand.csv  liion_storage.csv
tests/test_data/datapackages/test/data/sequences/: electricity_demand_profile.csv  liion_storage_profile.csv
tests/test_data/raw/: mapping.csv  multiple.csv  single.csv  timeseries.csv  timeseries_single.csv
tests/test_data/scenarios/: 2050-el_eff.yaml  regions.yaml  test.yaml
